tests/ui/errors/snapshots/parse_value_enum_negative_below_u64_max.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:3:10]
 2 │ enum Bad: int64 {
 3 │   Way = -18446744073709551616,
   ·          ──────────┬─────────
   ·                    ╰── integer literal '18446744073709551616' is too large
 4 │ }
   ╰────
  help: Maximum value is `18446744073709551615` · code: [parse.syntax_error]
